# tdd-lesson-2-mocking-eugen0

./: CMakeLists.txt  README.md
include/: Customer.h  Money.h  Video.h
include/interface/: ICustomer.h  IRentable.h
src/: Customer.cpp  Video.cpp
test/: TestCustomer.cpp  TestMoney.cpp  TestRentalController.cpp
test/mocks/: MockCustomer.h  MockRentable.h
